--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
-title: Your awesome title
+title: Recent Advances in AI
 author:
-  name: GitHub User
-  email: your-email@domain.com
+  name: Shaodong Wang
+  email: wangsd94@gmail.com
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
 description: >
-  Write an awesome description for your new site here. You can edit this line
-  in _config.yml. It will appear in your document head meta (for Google search
-  results) and in your feed.xml site description.
+  We are embarking on an era of great advancements in Artificial Intelligence. 
+  Gaining a fundamental understanding of AI methods can aid us in better envisioning the future. 
+  In this blog, I will share my summaries and insights from the academic papers I have read.
 
 # Build settings
 
@@ -37,7 +37,7 @@ minima:
   #   - { platform: google_scholar, user_url: "https://scholar.google.com/citations?user=qc6CJjYAAAAJ" }
   #   - { platform: instagram,      user_url: "https://www.instagram.com/jekyll" }
   #   - { platform: keybase,        user_url: "https://keybase.io/jekyll" }
-  #   - { platform: linkedin,       user_url: "https://www.linkedin.com/in/jekyll" }
+    - { platform: linkedin,       user_url: "https://www.linkedin.com/in/shaodong-wang-ds/" }
   #   - { platform: microdotblog,   user_url: "https://micro.blog/jekyll" }
   #   - { platform: pinterest,      user_url: "https://www.pinterest.com/jekyll" }
   #   - { platform: stackoverflow,  user_url: "https://stackoverflow.com/users/1234567/jekyll" }
