--- a/_config.yml
+++ b/_config.yml
@@ -47,8 +47,8 @@ minima:
 
 # If you want to link only specific pages in your header, uncomment this and add the path to the pages in
 # order as they should show up.
-#
-# header_pages:
+
+header_pages:
 #   - about.md
 
 # Set to `true` to show excerpts on the homepage.
