--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,7 @@ author:
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
 description: >
-  We are embarking on an era of great advancements in Artificial Intelligence. 
-  Gaining a fundamental understanding of AI methods can aid us in better envisioning the future. 
-  In this blog, I will share my summaries and insights from the academic papers I have read.
+  Share summaries and insights of recent Artificial Intelligence advances.
 
 # Build settings
 
@@ -28,7 +26,7 @@ minima:
 
   # Generate social links in footer.
   #
-  # social_links:
+  social_links:
   #   - { platform: devto,          user_url: "https://dev.to/jekyll" }
   #   - { platform: dribbble,       user_url: "https://dribbble.com/jekyll" }
   #   - { platform: facebook,       user_url: "https://www.facebook.com/jekyll" }
