--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ minima:
 # order as they should show up.
 
 header_pages:
-#   - about.md
+  - about.md
 
 # Set to `true` to show excerpts on the homepage.
 #
