--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Learning Notes about Recent Advances in Data Science
+title: Learning Notes about Recent Data Science Advances
 author:
   name: Shaodong Wang
   email: wangsd94@gmail.com
