--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Recent Advances in Data Science
+title: Recent Advances in Data Science - A Learning Journey
 author:
   name: Shaodong Wang
   email: wangsd94@gmail.com
